[tool.poetry]
name = "pytorch-chatbot"
version = "0.1.0"
description = ""
authors = ["tighug <tighug.4696@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
torch = "^1.10.0"
python-dotenv = "^0.19.2"
loguru = "^0.5.3"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.11b1"
mypy = "^0.910"
types-requests = "^2.27.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
